--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
+
 :root {
     --bg-c: #ffffff;
     --secondary-c: #1f1534;
@@ -31,6 +33,7 @@ section {
 body {
     background-color: var(--bg-c);
     color: var(--text-c);
+    font-family: "Mulish", serif;
 }
 
 html {
@@ -56,6 +59,38 @@ html {
 
 main {
     overflow: hidden;
+}
+
+.heading {
+    display: grid;
+    place-items: center;
+    gap: 2rem;
+
+    h2 {
+        font-size: var(--h2-fs);
+        font-weight: 700;
+        color: var(--secondary-c);
+        letter-spacing: 2px;
+        position: relative;
+        margin-bottom: 1rem;
+
+        &::after {
+            position: absolute;
+            content: "";
+            width: 25%;
+            height: 2px;
+            background-color: var(--secondary-c);
+            bottom: -50%;
+            left: 40%;
+        }
+    }
+
+    p {
+        font-size: var(--normal-fs);
+        max-width: 70%;
+        line-height: 1.5;
+        text-align: center;
+    }
 }
 
 /* Header */
@@ -93,7 +128,7 @@ header {
 
                     &.active {
                         color: var(--secondary-c);
-                        font-weight: 600;
+                        font-weight: 700;
                     }
                 }
             }
@@ -123,10 +158,10 @@ header {
 
                 h1 {
                     font-size: var(--h1-fs);
-                    font-weight: 600;
                     color: var(--title-c);
-                    max-width: 70%;
+                    max-width: 80%;
                     line-height: 1.5;
+                    font-weight: 800;
                     letter-spacing: 2px;
                 }
 
@@ -159,38 +194,6 @@ header {
 
     .services__container {
         padding: 1rem 5%;
-
-        .heading {
-            display: grid;
-            place-items: center;
-            gap: 2rem;
-
-            h2 {
-                font-size: var(--h2-fs);
-                font-weight: 600;
-                color: var(--secondary-c);
-                letter-spacing: 2px;
-                position: relative;
-                margin-bottom: 1rem;
-
-                &::after {
-                    position: absolute;
-                    content: "";
-                    width: 25%;
-                    height: 2px;
-                    background-color: var(--secondary-c);
-                    bottom: -50%;
-                    left: 40%;
-                }
-            }
-
-            p {
-                font-size: var(--normal-fs);
-                max-width: 70%;
-                line-height: 1.5;
-                text-align: center;
-            }
-        }
 
         .content {
             display: grid;
@@ -342,5 +345,249 @@ header {
             top: 45%;
             right: 0;
         }
+    }
+}
+
+/* Testimonials */
+
+.testimonials {
+    position: relative;
+
+    .testimonials__container {
+        padding: 1rem 5%;
+
+        .box {
+            max-width: 100vw;
+            background: linear-gradient(135deg, #67c3f3 0%, #5a98f2 100%);
+            position: relative;
+            padding: 5rem;
+            display: flex;
+            flex-direction: column;
+            border-radius: 24px;
+            height: 425px;
+            align-items: center;
+            justify-content: center;
+
+            h1 {
+                font-size: var(--h2-fs);
+                color: var(--bg-c);
+                font-weight: 600;
+                margin-bottom: 5rem;
+                position: relative;
+
+                &::after {
+                    position: absolute;
+                    content: "";
+                    width: 15%;
+                    height: 2px;
+                    background-color: var(--bg-c);
+                    bottom: -30%;
+                    left: 50%;
+                    border-radius: 12px;
+                    transform: translateX(-50%);
+                }
+            }
+
+            .element {
+                position: absolute;
+                top: 0;
+                right: -4%;
+            }
+
+            .profile {
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+
+                .img {
+                    display: flex;
+                    width: 100%;
+                    gap: 2rem;
+                    align-items: center;
+
+                    .text {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1rem;
+
+                        h2 {
+                            font-size: var(--h3-fs);
+                            font-weight: 600;
+                            color: var(--bg-c);
+                        }
+
+                        span {
+                            font-size: var(--normal-fs);
+                            color: var(--bg-c);
+                        }
+                    }
+                }
+
+                p {
+                    font-size: var(--normal-fs);
+                    color: var(--bg-c);
+                    line-height: 1.5;
+                }
+            }
+        }
+
+        .element__2 {
+            position: absolute;
+            bottom: 30%;
+            left: 13%;
+            z-index: -1;
+        }
+
+        .pagination {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 4rem;
+        }
+    }
+}
+
+/* Article */
+
+.article {
+    position: relative;
+
+    .article__container {
+        padding: 1rem 5%;
+
+        .heading {
+            margin-bottom: 7rem;
+        }
+
+        .content {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+            place-items: center;
+            margin-bottom: 5rem;
+            position: relative;
+
+            .box {
+                height: 512px;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+                border-radius: 20px;
+                overflow: hidden;
+                width: 400px;
+
+                .img {
+                    width: 100%;
+                    border-radius: 0;
+                    img {
+                        width: 100%;
+                        height: 246px;
+                    }
+                }
+
+                .text {
+                    padding: 1rem 1.5rem;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    h3 {
+                        font-size: var(--h3-fs);
+                        font-weight: 600;
+                        color: var(--secondary-c);
+                    }
+
+                    p {
+                        font-size: var(--normal-fs);
+                        max-width: 70%;
+                        line-height: 1.5;
+                    }
+
+                    a {
+                        display: flex;
+                        align-items: center;
+                        gap: 0.5rem;
+                        font-size: var(--normal-fs);
+                        color: var(--primary-c);
+                        margin-top: 1rem;
+                    }
+                }
+            }
+
+            .left {
+                position: absolute;
+                top: -10%;
+                left: -4%;
+                z-index: -1;
+            }
+        }
+
+        .primary {
+            margin: 0 auto;
+        }
+    }
+
+    .right {
+        position: absolute;
+        top: 10%;
+        right: 0;
+        z-index: -1;
+
+        img {
+            width: 500px;
+        }
+    }
+}
+
+footer {
+    position: relative;
+    background: linear-gradient(180deg, #67c3f3 0%, #5a98f2 100%);
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
+    .footer__container {
+        padding: 1rem 5%;
+
+        .box {
+            display: flex;
+            justify-content: space-between;
+
+            ol {
+                display: flex;
+                gap: 8rem;
+
+                .footer__list {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    h3 {
+                        font-size: var(--h3-fs);
+                        font-weight: 600;
+                        color: var(--bg-c);
+                        margin-bottom: 1rem;
+                    }
+
+                    li {
+                        a {
+                            font-size: var(--normal-fs);
+                            color: var(--bg-c);
+                            font-weight: 300;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .right {
+        position: absolute;
+        top: -15%;
+        right: 2%;
+        z-index: -1;
+    }
+
+    .left {
+        position: absolute;
+        bottom: 0;
+        left: 0;
     }
 }
