--- a/src/styling/style.css
+++ b/src/styling/style.css
@@ -60,6 +60,15 @@ html {
   @media only screen and (min-width: 1366px) {
     font-size: 100%;
   }
+
+  &::-webkit-scrollbar {
+    width: 0.4rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--primary-c);
+    border-radius: 12px;
+  }
 }
 
 .btn {
